# MarketSignal-Forecast

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements-market.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: __init__.py  api.py  schemas.py
configs/: default.toml
docs/: ARCHITECTURE.md  COMPARISON.md  PRD.md
src/marketsignal/: __init__.py  config.py
src/marketsignal/cli/: generate.py  predict.py  train.py
src/marketsignal/data/: __init__.py  loaders.py  schema.py  synthetic.py
src/marketsignal/evaluation/: __init__.py  explainability.py  metrics.py
src/marketsignal/features/: __init__.py  technical.py
src/marketsignal/inference/: __init__.py  predictor.py
src/marketsignal/models/: __init__.py  artifact.py  factory.py
src/marketsignal/training/: __init__.py  pipeline.py
src/marketsignal/utils/: io.py  logging.py  seeding.py
tests/: conftest.py  test_api.py  test_artifact.py  test_data.py  test_inference.py  test_training.py
