[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketsignal-forecast"
version = "2.0.0"
description = "Production-ready next-session equity direction forecasting from OHLCV data."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MarketSignal Contributors" }]
dependencies = [
    "fastapi>=0.115,<1",
    "numpy>=1.26,<3",
    "pandas>=2.1.3,<3",
    "pydantic>=2.8,<3",
    "scikit-learn>=1.5,<2",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
market = [
    "yfinance>=0.2.54,<2",
]
dev = [
    "httpx>=0.27,<1",
    "pytest>=8.2,<9",
    "pytest-cov>=5,<7",
    "ruff>=0.6,<1",
]

[project.scripts]
marketsignal-generate = "marketsignal.cli.generate:main"
marketsignal-train = "marketsignal.cli.train:main"
marketsignal-predict = "marketsignal.cli.predict:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
